--- a/index.html
+++ b/index.html
@@ -35,6 +35,24 @@
       </div>
     </div>
   </header>
+
+
+
+  <footer>
+    <div class="row">
+      <div class="input-field col s12">
+        <select>
+          <option value="" disabled selected>Español</option>
+          <option value="1">Deutsch</option>
+          <option value="1">English</option>
+          <option value="2">Francais</option>
+          <option value="1">Italiano</option>
+          <option value="3">Potuguês</option>
+        </select>
+        <label></label>
+      </div>
+    </div>
+  </footer>
   
 
 
@@ -54,5 +72,6 @@
   <script src="src/plugins/bootstrap.min.js"></script>  
   <!-- CUSTOM SCRIPTS -->
   <script type="text/javascript" src="dist/js/script.min.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
