--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+
+  <!-- NAVBAR ABRIL -->
   <header>
     <div class="row">
       <div class="col s12">
@@ -35,25 +37,39 @@
       </div>
     </div>
   </header>
+  <!-- FIN NAVBAR ABRIL -->
 
 
-
+  <!-- FOTER ABRIL -->
   <footer>
-    <div class="row">
-      <div class="input-field col s12">
-        <select>
-          <option value="" disabled selected>Español</option>
-          <option value="1">Deutsch</option>
-          <option value="1">English</option>
-          <option value="2">Francais</option>
-          <option value="1">Italiano</option>
-          <option value="3">Potuguês</option>
-        </select>
-        <label></label>
+    <div class="container">
+      <div class="row">
+        <div class="input-field col s12">
+          <select name="name" class="browser-default">
+            <option value="" disabled selected>Español</option>
+            <option value="1">Deutsch</option>
+            <option value="1">English</option>
+            <option value="2">Francais</option>
+            <option value="1">Italiano</option>
+            <option value="3">Potuguês</option>
+          </select>
+          <label></label>
+        </div>
+        <div class="input-field col s12">
+          <select name="name" class="browser-default">
+            <option value="" disabled selected>CLP</option>
+            <option value="1">DKK</option>
+            <option value="1">EUR</option>
+            <option value="2">MAD</option>
+            <option value="1">SAR</option>
+            <option value="3">USD</option>
+          </select>
+          <label></label>
+        </div>
       </div>
     </div>
   </footer>
-  
+  <!-- FIN FOOTER ABRIL -->
 
 
 
