--- a/index.html
+++ b/index.html
@@ -66,6 +66,39 @@
           </select>
           <label></label>
         </div>
+        <div class="col">
+          <h4>
+            Airbnb
+          </h4>
+          <a href="">Acerca de</a>
+          <a href="">Empleo</a>
+          <a href="">Prensa</a>
+          <a href="">Políticas</a>
+          <a href="">Ayuda</a>
+          <a href="">Diversidad y sentido de pertenencia</a>
+        </div>
+        <div class="col">
+          <h4>
+            Descubre Airbnb
+          </h4>
+          <a href="">Confianza y seguridad</a>
+          <a href="">Crédito para viajar</a>
+          <a href="">Cheques regalo</a>
+          <a href="">Airbnb Citizen</a>
+          <a href="">Viajes de negocios</a>
+          <a href="">Guías</a>
+        </div>
+        <div class="col">
+          <h4>
+            Hospedar
+          </h4>
+          <a href="">Razones para hospedar</a>
+          <a href="">Hospitalidad</a>
+          <a href="">Ser un anfitrión responsable</a>
+        </div>
+        <div class="divider">
+          
+        </div>
       </div>
     </div>
   </footer>
