--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
   <!-- FOTER ABRIL -->
-  <footer>
+  <footer class="page-footer">
     <div class="container">
       <div class="row">
         <div class="input-field col s12">
@@ -55,7 +55,7 @@
           </select>
           <label></label>
         </div>
-        <div class="input-field col s12">
+        <div class="input-field col s12">  
           <select name="name" class="browser-default">
             <option value="" disabled selected>CLP</option>
             <option value="1">DKK</option>
@@ -66,39 +66,42 @@
           </select>
           <label></label>
         </div>
-        <div class="col">
-          <h4>
-            Airbnb
-          </h4>
-          <a href="">Acerca de</a>
-          <a href="">Empleo</a>
-          <a href="">Prensa</a>
-          <a href="">Políticas</a>
-          <a href="">Ayuda</a>
-          <a href="">Diversidad y sentido de pertenencia</a>
+        <div class="col l4 offset-l2 s12">
+          <h5>Airbnb</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">Acerca de</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Empleo</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Prensa</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Políticas</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Ayuda</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Diversidad y sentido de pertenencia</a></li>
+            </ul>
         </div>
-        <div class="col">
-          <h4>
-            Descubre Airbnb
-          </h4>
-          <a href="">Confianza y seguridad</a>
-          <a href="">Crédito para viajar</a>
-          <a href="">Cheques regalo</a>
-          <a href="">Airbnb Citizen</a>
-          <a href="">Viajes de negocios</a>
-          <a href="">Guías</a>
+        <div class="col l4 offset-l2 s12">
+          <h5>Descubre Airbnb</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">Confianza y seguridad</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Crédito para viajar</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Cheques regalo</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Airbnb citizen</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Viajes de negocios</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Guías</a></li>
+            </ul>
         </div>
-        <div class="col">
-          <h4>
-            Hospedar
-          </h4>
-          <a href="">Razones para hospedar</a>
-          <a href="">Hospitalidad</a>
-          <a href="">Ser un anfitrión responsable</a>
+        <div class="col l4 offset-l2 s12">
+          <h5>Hospedar</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">Razones para hospedar</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Hospitalidad</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Ser un anfitrión responsable</a></li>
+            </ul>
         </div>
-        <div class="divider">
-          
-        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container copyright">
+      © Airbnb, Inc.
+        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
       </div>
     </div>
   </footer>
