--- a/index.html
+++ b/index.html
@@ -98,10 +98,13 @@
         </div>
       </div>
     </div>
-    <div class="footer-copyright">
+    <div>
       <div class="container copyright">
       © Airbnb, Inc.
-        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        <a class="text-lighten-4 right copyright" href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a class="text-lighten-4 right copyright" href="https://twitter.com/airbnb_latam"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        <a class="text-lighten-4 right copyright" href="https://www.facebook.com/AirbnbLatam"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+        <a class="text-lighten-4 right copyright" href="#!">Mapa del sitio</a> <a class="text-lighten-4 right copyright" href="#!">Términos y Privacidad</a>
       </div>
     </div>
   </footer>
@@ -118,6 +121,7 @@
 
 
 
+  <script src="https://use.fontawesome.com/e04595ffc3.js"></script>
   <!-- CORE JQUERY  -->
   <script src="src/plugins/jquery-1.10.2.js"></script>
   <!-- BOOTSTRAP CORE SCRIPT   -->
