--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <footer class="page-footer">
     <div class="container">
       <div class="row">
-        <div class="input-field col s12">
+        <div class="input-field col m2">
           <select name="name" class="browser-default">
             <option value="" disabled selected>Español</option>
             <option value="1">Deutsch</option>
@@ -55,7 +55,7 @@
           </select>
           <label></label>
         </div>
-        <div class="input-field col s12">  
+        <div class="input-field col m2">  
           <select name="name" class="browser-default">
             <option value="" disabled selected>CLP</option>
             <option value="1">DKK</option>
@@ -66,7 +66,7 @@
           </select>
           <label></label>
         </div>
-        <div class="col l4 offset-l2 s12">
+        <div class="col m2">
           <h5>Airbnb</h5>
             <ul>
               <li><a class="grey-text text-lighten-3" href="#!">Acerca de</a></li>
@@ -77,7 +77,7 @@
               <li><a class="grey-text text-lighten-3" href="#!">Diversidad y sentido de pertenencia</a></li>
             </ul>
         </div>
-        <div class="col l4 offset-l2 s12">
+        <div class="col m2">
           <h5>Descubre Airbnb</h5>
             <ul>
               <li><a class="grey-text text-lighten-3" href="#!">Confianza y seguridad</a></li>
@@ -88,7 +88,7 @@
               <li><a class="grey-text text-lighten-3" href="#!">Guías</a></li>
             </ul>
         </div>
-        <div class="col l4 offset-l2 s12">
+        <div class="col m2">
           <h5>Hospedar</h5>
             <ul>
               <li><a class="grey-text text-lighten-3" href="#!">Razones para hospedar</a></li>
@@ -99,6 +99,7 @@
       </div>
     </div>
     <div>
+      <div class="divider"></div>
       <div class="container copyright">
       © Airbnb, Inc.
         <a class="text-lighten-4 right copyright" href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
