--- a/index.html
+++ b/index.html
@@ -69,31 +69,31 @@
         <div class="col m2">
           <h5>Airbnb</h5>
             <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">Acerca de</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Empleo</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Prensa</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Políticas</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Ayuda</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Diversidad y sentido de pertenencia</a></li>
+              <li><a class="text-lighten-3" href="#!">Acerca de</a></li>
+              <li><a class="text-lighten-3" href="#!">Empleo</a></li>
+              <li><a class="text-lighten-3" href="#!">Prensa</a></li>
+              <li><a class="text-lighten-3" href="#!">Políticas</a></li>
+              <li><a class="text-lighten-3" href="#!">Ayuda</a></li>
+              <li><a class="text-lighten-3" href="#!">Diversidad y sentido de pertenencia</a></li>
             </ul>
         </div>
         <div class="col m2">
           <h5>Descubre Airbnb</h5>
             <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">Confianza y seguridad</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Crédito para viajar</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Cheques regalo</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Airbnb citizen</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Viajes de negocios</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Guías</a></li>
+              <li><a class="text-lighten-3" href="#!">Confianza y seguridad</a></li>
+              <li><a class="text-lighten-3" href="#!">Crédito para viajar</a></li>
+              <li><a class="text-lighten-3" href="#!">Cheques regalo</a></li>
+              <li><a class="text-lighten-3" href="#!">Airbnb citizen</a></li>
+              <li><a class="text-lighten-3" href="#!">Viajes de negocios</a></li>
+              <li><a class="text-lighten-3" href="#!">Guías</a></li>
             </ul>
         </div>
         <div class="col m2">
           <h5>Hospedar</h5>
             <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">Razones para hospedar</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Hospitalidad</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Ser un anfitrión responsable</a></li>
+              <li><a class="copyright text-lighten-3" href="#!">Razones para hospedar</a></li>
+              <li><a class="copyright text-lighten-3" href="#!">Hospitalidad</a></li>
+              <li><a class="copyright text-lighten-3" href="#!">Ser un anfitrión responsable</a></li>
             </ul>
         </div>
       </div>
