--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
         <div class="col m2">
           <h5>Hospedar</h5>
             <ul>
-              <li><a class="copyright text-lighten-3" href="#!">Razones para hospedar</a></li>
-              <li><a class="copyright text-lighten-3" href="#!">Hospitalidad</a></li>
-              <li><a class="copyright text-lighten-3" href="#!">Ser un anfitrión responsable</a></li>
+              <li><a class="text-lighten-3" href="#!">Razones para hospedar</a></li>
+              <li><a class="text-lighten-3" href="#!">Hospitalidad</a></li>
+              <li><a class="text-lighten-3" href="#!">Ser un anfitrión responsable</a></li>
             </ul>
         </div>
       </div>
@@ -101,7 +101,7 @@
     <div>
       <div class="divider"></div>
       <div class="container copyright">
-      © Airbnb, Inc.
+        © Airbnb, Inc.
         <a class="text-lighten-4 right copyright" href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
         <a class="text-lighten-4 right copyright" href="https://twitter.com/airbnb_latam"><i class="fa fa-twitter" aria-hidden="true"></i></a>
         <a class="text-lighten-4 right copyright" href="https://www.facebook.com/AirbnbLatam"><i class="fa fa-facebook" aria-hidden="true"></i></a>
